--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "deferred": "^0.7.3",
+    "moment": "^2.10.6",
     "request": "^2.64.0",
     "vow-telegram-bot": "^0.1.1"
   }
