--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "deferred": "^0.7.3",
+    "downcache": "0.0.8",
     "moment": "^2.10.6",
-    "request": "^2.64.0",
+    "request": "^2.65.0",
     "sqlite3": "^3.1.0",
     "vow-telegram-bot": "^0.1.1"
   }
